<resources>
    <string name="app_name">Week-Six-Task</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="back_button_for_profile_activity">Back button for profile activity</string>
    <string name="opt_button_for_profile_activity">opt button for profile activity</string>
    <string name="call_button">call Button</string>
    <string name="call">Call</string>
    <string name="share_button">share button</string>
    <string name="share">Share</string>
    <string name="message_button">Message Button</string>
    <string name="message">Message</string>
    <string name="number">number</string>
    <string name="delete_button">delete button</string>
    <string name="edit_button">edit button</string>
    <string name="back_button_for_create_contact_activity">back button for create contact activity</string>
    <string name="create_contact">Create contact</string>
    <string name="save">Save</string>
    <string name="first_names">First Name</string>
    <string name="surnames">Surname</string>
    <string name="phones">Phone</string>
    <string name="emails">Email</string>
    <string name="back_button_for_edit_contact">back button for edit contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="nav_button">nav button</string>
    <string name="next_button">next button</string>
    <string name="contacts_abasstoy14_gmail_com">CONTACTS: ABASSTOY14@GMAIL.COM</string>
    <string name="floating_button">Floating button</string>
    <string name="error">error</string>
    <string name="back_button">back button</string>
    <string name="request_permission">Request Permission</string>
    <string name="as">A</string>
    <string name="names">Name</string>
    <string name="_0809">0809</string>
    <string name="a">A</string>
    <string name="name">Name</string>
    <string name="_08099">0809</string>
</resources>