<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".ui.MainActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/toolBar_main"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:elevation="30dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/navBtn_main"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_menu_24"
                android:contentDescription="@string/nav_button" />
            <androidx.appcompat.widget.SearchView
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@+id/navBtn_main"
                app:layout_constraintTop_toTopOf="@id/navBtn_main"
                app:layout_constraintBottom_toBottomOf="@id/navBtn_main"
                app:layout_constraintEnd_toStartOf="@id/nextBtn"/>
            <ImageButton
                android:id="@+id/nextBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat = "@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:contentDescription="@string/next_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/topView_main"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/montserrat"
                app:layout_constraintBottom_toBottomOf="@id/topView_main"
                app:layout_constraintStart_toEndOf="@id/topView_main"
                app:layout_constraintEnd_toEndOf="@id/topView_main"
                android:text="@string/contacts_abasstoy14_gmail_com"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingStart="30dp"
                android:paddingTop="12dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topView_main" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/addBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/floatbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/floating_button" />


</androidx.constraintlayout.widget.ConstraintLayout>